# SemanticDataService

./: .gitignore  CMakeLists.txt  DB_store.cpp  DB_store_client.cpp  HDF5_read.cpp  README.md  SDSlet_client_test.cpp  SDSlet_test.cpp  arrow_test.cpp  compile.sh  dataManager_test.cpp  databox_test.cpp  db_client.py  db_client1.py  db_client2.py  db_client3.py  duckdb_test.cpp  main.cpp  mvp1.cpp
metadata/SSDesc/: 2024-04-10-15-54-15.csv  2024-08-10-13-16-55.json  2024-08-10-14-49-58.parquet  2024-08-13-20-38-17.csv  2024-08-13-21-05-30.csv  2024-10-11-08-39-11.csv  2024-10-11-08-39-11.json  2024-10-12-03-56-29.parquet
metadata/TSDesc/: 2024-10-11-08-39-11.csv  2024-10-11-08-39-11.parquet  2024-10-12-03-56-29.json
metadata/VLDesc/: 2024-10-11-08-39-11.csv  2024-10-11-08-39-11.json  2024-10-11-08-39-11.parquet  2024-10-12-03-56-29.csv  2024-10-12-03-56-29.json  2024-10-12-03-56-29.parquet
scripts/: install_netcdf.sh
src/: CMakeLists.txt
src/API/: CMakeLists.txt  STL_buffer.cpp  buffer.cpp  data_box.cpp  semantic_space.cpp  storage_space.cpp
src/API/dataspace/: CMakeLists.txt  data_box.cpp  data_management.cpp  databox_client.cpp  databox_store.cpp  meta_service.cpp  meta_service_client.cpp
src/API/semanticspace/: semantic_space.cpp
src/API/storagespace/: CMakeLists.txt  storage_space.cpp
src/SDSlet/: CMakeLists.txt  SDSlet.cpp
src/abstract/: CMakeLists.txt
src/abstract/GIS/: CMakeLists.txt  geo_read.cpp
src/abstract/IO/: CMakeLists.txt  io.cpp
src/abstract/adaptor/: CMakeLists.txt  HDF_pluge.cpp  NC_pluge.cpp  local_adaptor.cpp  pluge_factory.cpp
src/abstract/ae/: CMakeLists.txt  ae.c  ae_epoll.c  ae_evport.c  ae_kqueue.c  ae_select.c
src/abstract/buffer/: CMakeLists.txt
src/abstract/buffer/base/: CMakeLists.txt  buffer.cpp
src/abstract/buffer/malloc/: CMakeLists.txt  STL_buffer.cpp
src/abstract/buffer/memory/: CMakeLists.txt  memory.cpp
src/abstract/event/: CMakeLists.txt  events.cpp
src/abstract/meta/: CMakeLists.txt  cnt_ID.cpp  meta_store.cpp
src/abstract/rpc/: CMakeLists.txt
src/abstract/rpc/data_rpc/: CMakeLists.txt  server.cpp
src/abstract/utils/: CMakeLists.txt  directory_operation.cpp  string_operation.cpp  time_operation.cpp
src/app/: CMakeLists.txt  SDS_retrieval.cpp
src/include/: content_metadata.h  metadata.h
src/include/API/: STL_buffer.h  buffer.h  data_box.h  data_management.h  semantic_space.h  storage_space.h
src/include/API/dataspace/: data_box.h  data_management.h  databox_client.h  databox_store.h  meta_service.h  meta_service_client.h
src/include/API/semanticspace/: semantic_space.h
src/include/API/storagespace/: storage_space.h
src/include/SDSlet/: SDSlet.h
src/include/abstract/GIS/: geo_read.h
src/include/abstract/IO/: io.h
src/include/abstract/adaptor/: HDF_pluge.h  NC_pluge.h  adaptor.h  ceph_adaptor.h  local_adaptor.h  lustre_adaptor.h  pluge_factory.h
src/include/abstract/buffer/base/: buffer.h  bufferV.h
src/include/abstract/buffer/malloc/: STL_buffer.h
src/include/abstract/buffer/memory/: memory.h
src/include/abstract/event/: events.h
src/include/abstract/meta/: cnt_ID.h  cnt_meta_template.h  meta_store.h  sto_meta_template.h
src/include/abstract/rpc/data_rpc/: server.h
src/include/abstract/storage/: memory_store.h
src/include/abstract/utils/: directory_operation.h  string_operation.h  time_operation.h
src/include/app/: SDS_retrieval.h
src/include/manager/: cnt_meta.h  index.h  meta.h  space_index.h  sto_meta.h  time_index.h  var_index.h
src/include/manager/databox/: databox_client.h  databox_manager.h  databox_object.h  databox_store.h
src/include/manager/event/: event.h
src/include/manager/index/: index.h  space_index.h  time_index.h  var_index.h
src/include/manager/metadata/: cnt_meta.h  metada_manager.h  sto_meta.h
src/include/manager/proto/: db_flb_generated.h  index.grpc.pb.h  index.pb.h  index.proto  meta.fbs  meta_flb.fbs  meta_flb_generated.h  meta_generated.h
src/include/manager/rpc/data_rpc/: meta_server.h  reader.h  server.h
src/include/manager/rpc/metadata_rpc/: db_protocol.h  index_reader.h  meta_protocol.h  protocol.h
src/include/manager/semanticspace/: semantic_space.h
src/include/manager/storagespace/: storage_space.h
src/include/utils/: directory_operation.h  string_operation.h
src/manager/: CMakeLists.txt  cnt_meta.cpp  content_metadata.cpp  space_index.cpp  sto_meta.cpp  var_index.cpp
src/manager/databox/: CMakeLists.txt  databox_client.cpp  databox_object.cpp  databox_store.cpp
src/manager/index/: CMakeLists.txt  space_index.cpp  time_index.cpp  var_index.cpp
src/manager/metadata/: CMakeLists.txt  cnt_meta.cpp  sto_meta.cpp
src/manager/proto/: CMakeLists.txt  index.grpc.pb.cc  index.pb.cc
src/manager/rpc/: CMakeLists.txt
src/manager/rpc/data_rpc/: CMakeLists.txt  meta_server.cpp  reader.cpp  server.cpp
src/manager/rpc/metadata_rpc/: CMakeLists.txt  db_protocol.cpp  index_reader.cpp  meta_protocol.cpp  protocol.cpp
src/manager/semanticspace/: CMakeLists.txt  semantic_space.cpp
src/manager/storagespace/: storage_space.cpp
src/scripts/: install_flatbuffer.sh
src/utils/: CMakeLists.txt  directory_operation.cpp  string_operation.cpp
test/: ldasin.20221024T150000.nc
third_party_lib/duckdb/include/: duckdb.hpp
third_party_lib/netcdf/include/: netcdf_meta.h
third_party_lib/netcdf/lib/: libnetcdf.settings  libnetcdf.so.19.2.2
third_party_lib/netcdf/lib/pkgconfig/: netcdf.pc
